[package]
name = "todos"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
bb8 = { version = "0.9"}
bb8-postgres = "0.9.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
tokio-postgres = "0.7.12"
serde = { version = "1.0.216", features = ["derive"] }
